# imspy_wrapper

./: Makefile  README.md  pyproject.toml  pytest.ini
__dev/: devel.py  devel2.py  devel3.py  koina_rt_alt.py  querry.py
__dev/analyses/: data_source_check.py
src/imspy_wrapper/: get_data_in_project_example.py  main.py
src/imspy_wrapper/cli/: serve_models.py
